apps/_shared/network-policy/public-web-egress/allow-public-web-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-public-web-egress
spec:
  podSelector:
    matchLabels:
      mousses.xyz/public-web-egress: "true"
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
              - 169.254.0.0/16
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
